fixed tab alignment and grid on container styling

--- a/main.less
+++ b/main.less
@@ -89,7 +89,7 @@ body{
 }
 
 .container-fluid{
-  margin: 1.3em;
+  //margin: 1.3em;
 }
 
 section{
